# vigil

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  miscellanea.xlsx  pyproject.toml  session_history.txt  ~$miscellanea.xlsx
.claude/agents/: vigil-dev.md
.codex/agents/: vigil-dev.toml
configs/: android_platform.yaml  default.yaml
configs/apps/: alipay.yaml  settings.yaml  wechat.yaml
docs/: architecture.md  dsl_grammar.lark  error_taxonomy.md  nsdi_paper_outline.md
docs/com_android_settings/: fsm.html
docs/context/: AGENTS.full.md  CLAUDE.full.md  README.md
docs/prompts/: claude_code_fidelity_app_prompt.md
eval/: __init__.py  metrics.py  run_benchmark.py
fidelity_app/: README.md  settings.gradle.kts
fidelity_app/app/: build.gradle.kts  (+1 more)
mobile_agents/: .gitignore  README.md  verify_setup.sh
output_docs/: compare_fidelity_gold.py  dsl_grammar.lark  fidelity_app_claude_prompts.md  fidelity_app_fsm.html  fidelity_app_ground_truth_fsm.json
scripts/: classify_xml.py  fix_venv_hidden.py  validate_fsm.py
tests/: conftest.py  test_agent_runner.py  test_ape.py  test_app_prior.py  test_behavioral_quotient.py  test_behavioral_signature.py  test_decision_engine.py  test_device_resolver.py  test_doctor.py  test_droidbot_parser.py  test_dsl_evaluator.py  test_dsl_generator.py  test_evolution.py  test_explorer.py  test_fsm_builder.py  test_fsm_checker.py  test_generate_fidelity_guards_script.py  test_guard_admission.py  test_guard_contract_llm.py  test_guard_contract_synthesizer.py  test_guard_contracts.py  test_guard_dsl_compiler.py  test_guard_evidence.py  test_guard_generation_pipeline.py  test_guard_policy.py  test_guard_registry.py  test_intent_extractor.py  test_invariant_admission.py  test_invariant_checker.py  test_invariant_evidence.py  test_invariant_generation_pipeline.py  test_invariant_guard_llm.py  test_legacy_audit_migration.py  test_llm_client.py  test_llm_fallback.py  test_llm_structured.py  test_models.py  test_platform_priors.py  test_prompt_loader.py  test_prompt_redaction.py  (+9 more)
(+771 files in other folders)
