[project]
name = "vigil"
version = "0.1.0"
description = "Self-Evolving Neuro-Symbolic Runtime Verification for Mobile GUI Agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Luca Yu", email = "lucayu@connect.hku.hk" },
]
keywords = ["gui-agent", "verification", "fsm", "neuro-symbolic", "android"]

dependencies = [
    # Android device control
    "uiautomator2>=3.0",
    "adbutils>=2.0",
    # Graph / FSM
    "networkx>=3.2",
    # DSL parsing
    "lark>=1.1",
    # LLM clients (offline stage only)
    "anthropic>=0.40",
    "openai>=1.50",
    # Config & data
    "pydantic>=2.5",
    "pyyaml>=6.0",
    # Image
    "Pillow>=10.0",
    # Logging
    "loguru>=0.7",
    "graphviz>=0.21",
    "google-genai>=1.70.0",
    "python-dotenv>=1.2.2",
    "charset-normalizer>=3.4.6",
]

[project.optional-dependencies]


[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
]
test = [
    "py>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "typing-extensions>=4.15.0",
]
lint = [
    "ruff>=0.8",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
eval = [
    "matplotlib>=3.8",
    "graphviz>=0.21",
    "pandas>=2.1",
]

[project.scripts]
vigil-explore = "vigil.scripts.explore_app:main"
vigil-build = "vigil.scripts.build_fsm:main"
vigil-verify = "vigil.scripts.verify_fsm:main"
vigil-visualize = "vigil.scripts.visualize_fsm:main"
vigil-verify-action = "vigil.scripts.verify_action:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vigil"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]
